Updated dashboard and added image disease detection features

--- a/chatbot.html
+++ b/chatbot.html
@@ -102,10 +102,10 @@
 
 <body>
 
-    <div class="header">Kanasu Bee Assistant</div>
+    <div class="header">Kanasu Bee Chatbot </div>
 
     <div id="chat-window">
-        <div class="msg bot-msg">Hello! Welcome to Kanasu Bee House. How can I help you today?</div>
+        <div class="msg bot-msg">Hello! Welcome to Kanasu Bee House.<br> I'm Kanasu Bee,How can I help you today?</div>
     </div>
 
     <div class="input-container">
