Updated all pages UI and Bee Scan AI

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <div class="header">
                     <h1>Kanasu <span>Bee House</span></h1>
                     <div class="subtitle">
-                        IoT Beehive Analytics & AI-Powered Health Detection
+                         Hybrid Acoustic–Vision AI Platform for Smart Apiculture
                     </div>
                 </div>
 
@@ -378,10 +378,6 @@
             </div>
 
         </div>
-    </div>
-
-    <div class="footer">
-        🛡️ <span>Secure Access</span> • Powered by Kanasu v2.0 AI Core
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
