--- a/videos.html
+++ b/videos.html
@@ -162,7 +162,7 @@
 <body>
 
     <div class="header">
-        <a href="dashboard.html" class="back-btn">← Back</a>
+        <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
         <h2 style="font-weight: 800;">Learning Center</h2>
     </div>
 
@@ -223,9 +223,6 @@
 
     </div>
 
-    <footer style="text-align: center; padding: 60px 0; color: #94a3b8; font-size: 13px;">
-        <p>&copy; 2026 Kanasu Bee House • Education for Sustainability</p>
-    </footer>
 
 </body>
 
