updated chatbot ui

--- a/chatbot.html
+++ b/chatbot.html
@@ -136,7 +136,7 @@ body{
 <body>
 
 <div class="header">
-    <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
+    <a href="dashboard.html" class="back-btn">← Dashboard</a>
     Kanasu Bee Chatbot
 </div>
 
