--- a/chatbot.html
+++ b/chatbot.html
@@ -3,156 +3,192 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kanasu Bee House AI</title>
+<title>Bee Assistant | Kanasu Bee House</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
+:root{
+--primary:#f4b400;
+--secondary:#2e7d32;
+--dark:#1e293b;
+--light-bg:#fcfcf9;
+--white:#ffffff;
+}
+
 *{
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:'Inter',sans-serif;
 }
 
 body{
-    font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    background:#f9f9f9;
-    height:100vh;
-    display:flex;
-    flex-direction:column;
+background:var(--light-bg);
+color:var(--dark);
+display:flex;
+flex-direction:column;
+height:100vh;
 }
 
-/* Header */
-.header{
-    background:#ffcc00;
-    padding:15px;
-    text-align:center;
-    font-weight:bold;
-    position:relative;
+/* NAVBAR SAME AS OTHER PAGES */
+nav{
+padding:15px 5%;
+background:var(--white);
+display:flex;
+justify-content:space-between;
+align-items:center;
+border-bottom:1px solid #eee;
+position:sticky;
+top:0;
+z-index:1000;
 }
 
-/* Back Button */
-.back-btn{
-    position:absolute;
-    left:15px;
-    top:12px;
-    text-decoration:none;
-    color:#000;
-    font-weight:bold;
+.back-link{
+text-decoration:none;
+color:var(--dark);
+font-weight:700;
+font-size:14px;
 }
 
-/* Chat Window */
+/* CHAT CONTAINER */
+.chat-wrapper{
+flex:1;
+display:flex;
+flex-direction:column;
+max-width:900px;
+margin:auto;
+width:100%;
+}
+
+/* CHAT WINDOW */
 #chat-window{
-    flex:1;
-    overflow-y:auto;
-    padding:15px;
-    display:flex;
-    flex-direction:column;
-    gap:12px;
+flex:1;
+overflow-y:auto;
+padding:30px 20px;
+display:flex;
+flex-direction:column;
+gap:14px;
 }
 
+/* MESSAGES */
 .msg{
-    max-width:80%;
-    padding:10px 15px;
-    border-radius:18px;
-    font-size:16px;
-    line-height:1.4;
-    opacity:0;
-    transform:translateY(10px);
-    animation:fadeIn 0.25s ease forwards;
+max-width:75%;
+padding:14px 16px;
+border-radius:16px;
+font-size:15px;
+line-height:1.5;
+opacity:0;
+transform:translateY(10px);
+animation:fadeIn 0.25s ease forwards;
 }
 
 @keyframes fadeIn{
-    to{
-        opacity:1;
-        transform:translateY(0);
-    }
+to{
+opacity:1;
+transform:translateY(0);
+}
 }
 
 .user-msg{
-    align-self:flex-end;
-    background:#ffcc00;
-    color:#000;
-    border-bottom-right-radius:2px;
+align-self:flex-end;
+background:var(--primary);
+color:#000;
+border-bottom-right-radius:4px;
 }
 
 .bot-msg{
-    align-self:flex-start;
-    background:#eeeeee;
-    color:#333;
-    border-bottom-left-radius:2px;
+align-self:flex-start;
+background:white;
+border:1px solid #e2e8f0;
+border-bottom-left-radius:4px;
 }
 
 /* Typing dots */
 .typing-dots{
-    display:inline-flex;
-    gap:4px;
+display:inline-flex;
+gap:4px;
 }
 
 .typing-dots span{
-    width:6px;
-    height:6px;
-    background:#777;
-    border-radius:50%;
-    animation:blink 1.4s infinite both;
+width:6px;
+height:6px;
+background:#888;
+border-radius:50%;
+animation:blink 1.4s infinite both;
 }
 
 .typing-dots span:nth-child(2){animation-delay:0.2s}
 .typing-dots span:nth-child(3){animation-delay:0.4s}
 
 @keyframes blink{
-    0%{opacity:.2}
-    20%{opacity:1}
-    100%{opacity:.2}
+0%{opacity:.2}
+20%{opacity:1}
+100%{opacity:.2}
 }
 
-/* Input */
+/* INPUT BAR */
 .input-container{
-    padding:10px;
-    background:white;
-    border-top:1px solid #ddd;
-    display:flex;
-    gap:8px;
+padding:20px;
+background:var(--white);
+border-top:1px solid #eee;
+display:flex;
+gap:10px;
 }
 
 #user-input{
-    flex:1;
-    padding:12px;
-    border:1px solid #ccc;
-    border-radius:25px;
-    font-size:16px;
-    outline:none;
+flex:1;
+padding:12px 14px;
+border-radius:10px;
+border:1px solid #e2e8f0;
+font-size:14px;
+}
+
+#user-input:focus{
+outline:none;
+border-color:var(--primary);
+box-shadow:0 0 0 3px rgba(244,180,0,0.1);
 }
 
 #send-btn{
-    background:#ffcc00;
-    border:none;
-    padding:10px 20px;
-    border-radius:25px;
-    font-weight:bold;
-    cursor:pointer;
+background:var(--primary);
+border:none;
+padding:12px 20px;
+border-radius:10px;
+font-weight:700;
+cursor:pointer;
 }
 </style>
 </head>
 
 <body>
 
-<div class="header">
-    <a href="dashboard.html" class="back-btn">← Dashboard</a>
-    Kanasu Bee Chatbot
+<nav>
+<a href="dashboard.html" class="back-link">← Dashboard</a>
+<div style="font-weight:800;">
+KANASU <span style="color:var(--primary)">BEE HOUSE</span>
 </div>
+</nav>
+
+<div class="chat-wrapper">
 
 <div id="chat-window">
-    <div class="msg bot-msg">
-        Hi, I'm Kanasu Bee..<br>
-        How can I help you today about bee keeping?
-    </div>
+<div class="msg bot-msg">
+Hi, I'm Kanasu Bee 🐝<br>
+How can I help you today about bee keeping?
+</div>
 </div>
 
 <div class="input-container">
-    <input type="text" id="user-input" placeholder="Ask about bee keeping..." autocomplete="off">
-    <button id="send-btn">Send</button>
+<input type="text" id="user-input" placeholder="Ask about bee keeping..." autocomplete="off">
+<button id="send-btn">Send</button>
+</div>
+
 </div>
 
 <script>
+/* ===== YOUR ORIGINAL LOGIC UNCHANGED ===== */
+
 const chatWindow=document.getElementById('chat-window');
 const userInput=document.getElementById('user-input');
 const sendBtn=document.getElementById('send-btn');
@@ -160,55 +196,55 @@ const sendBtn=document.getElementById('send-btn');
 const SERVER_URL="https://kanasu-api.onrender.com/chat";
 
 async function handleSend(){
-    const text=userInput.value.trim();
-    if(!text)return;
+const text=userInput.value.trim();
+if(!text)return;
 
-    addMessage(text,'user-msg');
-    userInput.value='';
+addMessage(text,'user-msg');
+userInput.value='';
 
-    const typingDiv=document.createElement('div');
-    typingDiv.className='msg bot-msg';
-    typingDiv.id='typing';
-    typingDiv.innerHTML=`
-        <div class="typing-dots">
-            <span></span><span></span><span></span>
-        </div>
-    `;
-    chatWindow.appendChild(typingDiv);
-    scrollToBottom();
+const typingDiv=document.createElement('div');
+typingDiv.className='msg bot-msg';
+typingDiv.id='typing';
+typingDiv.innerHTML=`
+<div class="typing-dots">
+<span></span><span></span><span></span>
+</div>
+`;
+chatWindow.appendChild(typingDiv);
+scrollToBottom();
 
-    try{
-        const response=await fetch(SERVER_URL,{
-            method:'POST',
-            headers:{'Content-Type':'application/json'},
-            body:JSON.stringify({message:text})
-        });
+try{
+const response=await fetch(SERVER_URL,{
+method:'POST',
+headers:{'Content-Type':'application/json'},
+body:JSON.stringify({message:text})
+});
 
-        const data=await response.json();
-        document.getElementById('typing').remove();
-        addMessage(data.reply||"I'm sorry, I couldn't process that.",'bot-msg');
+const data=await response.json();
+document.getElementById('typing').remove();
+addMessage(data.reply||"I'm sorry, I couldn't process that.",'bot-msg');
 
-    }catch(err){
-        document.getElementById('typing').remove();
-        addMessage("Error: Could not connect to hive server.",'bot-msg');
-    }
+}catch(err){
+document.getElementById('typing').remove();
+addMessage("Error: Could not connect to hive server.",'bot-msg');
+}
 }
 
 function addMessage(text,className){
-    const div=document.createElement('div');
-    div.className=`msg ${className}`;
-    div.innerText=text;
-    chatWindow.appendChild(div);
-    scrollToBottom();
+const div=document.createElement('div');
+div.className=`msg ${className}`;
+div.innerText=text;
+chatWindow.appendChild(div);
+scrollToBottom();
 }
 
 function scrollToBottom(){
-    chatWindow.scrollTop=chatWindow.scrollHeight;
+chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
 sendBtn.addEventListener('click',handleSend);
 userInput.addEventListener('keypress',(e)=>{
-    if(e.key==='Enter')handleSend();
+if(e.key==='Enter')handleSend();
 });
 </script>
 
