--- a/chatbot.html
+++ b/chatbot.html
@@ -174,7 +174,7 @@ KANASU <span style="color:var(--primary)">BEE HOUSE</span>
 
 <div id="chat-window">
 <div class="msg bot-msg">
-Hi, I'm Kanasu Bee 🐝<br>
+Hi, I'm Kanasu Bee...<br>
 How can I help you today about bee keeping?
 </div>
 </div>
