--- a/chatbot.html
+++ b/chatbot.html
@@ -10,7 +10,6 @@
 <style>
 :root{
 --primary:#f4b400;
---secondary:#2e7d32;
 --dark:#1e293b;
 --light-bg:#fcfcf9;
 --white:#ffffff;
@@ -26,9 +25,9 @@ font-family:'Inter',sans-serif;
 body{
 background:var(--light-bg);
 color:var(--dark);
+min-height:100vh;
 display:flex;
 flex-direction:column;
-height:100vh;
 }
 
 /* NAVBAR */
@@ -51,26 +50,44 @@ font-weight:700;
 font-size:14px;
 }
 
-/* CHAT WRAPPER WITH COLORED BORDER */
-.chat-wrapper{
+/* OUTER WRAPPER */
+.main-wrapper{
 flex:1;
 display:flex;
-flex-direction:column;
-max-width:900px;
-margin:30px auto;
+justify-content:center;
+align-items:center;
+padding:20px;
+}
+
+/* CHAT WRAPPER WITH BORDER */
+.chat-wrapper{
 width:100%;
+max-width:900px;
 background:white;
-border:2px solid #f4b400;
+border:3px solid #f4b400;
 border-radius:20px;
-box-shadow:0 15px 40px rgba(244,180,0,0.08);
+box-shadow:0 15px 40px rgba(244,180,0,0.1);
+display:flex;
+flex-direction:column;
+height:80vh;
 overflow:hidden;
+}
+
+/* TITLE INSIDE BORDER */
+.chat-title{
+text-align:center;
+font-weight:800;
+font-size:18px;
+padding:18px;
+border-bottom:1px solid #eee;
+background:#fffdf5;
 }
 
 /* CHAT WINDOW */
 #chat-window{
 flex:1;
 overflow-y:auto;
-padding:30px 20px;
+padding:25px;
 display:flex;
 flex-direction:column;
 gap:14px;
@@ -134,7 +151,7 @@ animation:blink 1.4s infinite both;
 
 /* INPUT BAR */
 .input-container{
-padding:20px;
+padding:15px;
 background:var(--white);
 border-top:1px solid #eee;
 display:flex;
@@ -175,11 +192,17 @@ KANASU <span style="color:var(--primary)">BEE HOUSE</span>
 </div>
 </nav>
 
+<div class="main-wrapper">
+
 <div class="chat-wrapper">
+
+<div class="chat-title">
+KANASU BEE CHATBOT 
+</div>
 
 <div id="chat-window">
 <div class="msg bot-msg">
-Hi, I'm Kanasu Bee 🐝<br>
+Hi, I'm Kanasu Bee..<br>
 How can I help you today about bee keeping?
 </div>
 </div>
@@ -187,6 +210,8 @@ How can I help you today about bee keeping?
 <div class="input-container">
 <input type="text" id="user-input" placeholder="Ask about bee keeping..." autocomplete="off">
 <button id="send-btn">Send</button>
+</div>
+
 </div>
 
 </div>
