Updated welcome page, live dashboard and UI improvements

--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@ footer{
 <body>
 
 <nav>
-    <a href="dashboard.html" class="back-link">← Dashboard</a>
+    <a href="welcome.html" class="back-link">← Dashboard</a>
     <div class="brand">
         <span class="kanasu">KANASU</span>
         <span class="bee-house"> BEE HOUSE</span>
