--- a/calculator.html
+++ b/calculator.html
@@ -165,7 +165,7 @@ font-weight:800;
 <body>
 
 <nav>
-<a href="dashboard.html" class="back-link">← Dashboard</a>
+<a href="welcome.html" class="back-link">← Dashboard</a>
 <div style="font-weight:800;">
 KANASU <span style="color:var(--primary)">BEE HOUSE</span>
 </div>
