--- a/videos.html
+++ b/videos.html
@@ -195,7 +195,7 @@ padding:20px;
 <body>
 
 <div class="header">
-<a href="dashboard.html" class="back-btn">← Dashboard</a>
+<a href="welcome.html" class="back-btn">← Dashboard</a>
 <div style="font-weight:800;">
 KANASU <span style="color:#f4b400;">BEE HOUSE</span>
 </div>
