--- a/chatbot.html
+++ b/chatbot.html
@@ -186,7 +186,7 @@ cursor:pointer;
 <body>
 
 <nav>
-<a href="dashboard.html" class="back-link">← Dashboard</a>
+<a href="welcome.html" class="back-link">← Dashboard</a>
 <div style="font-weight:800;">
 KANASU <span style="color:var(--primary)">BEE HOUSE</span>
 </div>
