--- a/image-disease.html
+++ b/image-disease.html
@@ -198,7 +198,7 @@ display:none;
 <body>
 
 <nav>
-<a href="dashboard.html" class="back-link">← Dashboard</a>
+<a href="welcome.html" class="back-link">← Dashboard</a>
 <div style="font-weight:800;">
 KANASU <span style="color:var(--primary)">BEE HOUSE</span>
 </div>
