--- a/welcome.html
+++ b/welcome.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kanasu Bee House – Welcome</title>
+<title>Kanasu Bee House - Welcome</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
@@ -13,208 +13,345 @@
 <script src="firebase.js"></script>
 
 <style>
-:root { --primary:#f4b400; --bg:#fffcf0; --glass:rgba(255,255,255,.95); --shadow:0 12px 40px rgba(0,0,0,.08); }
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Montserrat',sans-serif}
-body{background:var(--bg);color:#2d3436; min-height: 100vh; overflow-x: hidden;}
+:root{
+--primary:#f4b400;
+--bg:#fffcf0;
+--glass:rgba(255,255,255,.95);
+--shadow:0 10px 35px rgba(0,0,0,.06);
+}
 
-/* TOPBAR ALIGNMENT */
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:'Montserrat',sans-serif;
+}
+
+body{
+background:var(--bg);
+color:#2d3436;
+min-height:100vh;
+}
+
+/* TOPBAR */
 .topbar{
-display:flex;justify-content:space-between;align-items:center;
-padding:12px 25px;background:var(--glass);
-position:sticky;top:0;z-index:1000;
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:14px 24px;
+background:var(--glass);
+position:sticky;
+top:0;
+z-index:1000;
 border-bottom:1px solid rgba(244,180,0,.2);
-backdrop-filter: blur(10px);
 }
 
 .menu-btn{
-font-size:20px;background:white;border:1px solid #eee;
-width:40px;height:40px;border-radius:10px;cursor:pointer;transition: 0.3s;
+width:42px;
+height:42px;
+border-radius:12px;
+border:1px solid #eee;
+background:white;
+font-size:18px;
+cursor:pointer;
+transition:.2s;
 }
 
+.menu-btn:hover{
+background:#fafafa;
+}
+
+/* DROPDOWN */
 .dropdown{
-display:none;position:absolute;top:60px;left:20px;
-background:white;border-radius:15px;width:280px;
-box-shadow:0 10px 30px rgba(0,0,0,.1);padding:10px;
-}
-.menu:hover .dropdown{display:block}
-.dropdown b{padding:10px;display:block;font-size:11px;color:#999;text-transform:uppercase;}
-.dropdown a{padding:12px;display:block;text-decoration:none;color:#444;border-radius:8px;font-weight:600;font-size:14px;cursor:pointer;}
-.dropdown a:hover{background:rgba(244,180,0,.1);color:var(--primary)}
-
-/* HERO SPLIT SECTION */
-.hero-container {
-    display: flex;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 40px 5%;
-    align-items: center;
-    gap: 30px;
-    min-height: 80vh;
+display:none;
+position:absolute;
+top:65px;
+left:24px;
+background:white;
+width:280px;
+border-radius:16px;
+box-shadow:0 18px 45px rgba(0,0,0,.12);
+padding:14px;
+max-height:450px;
+overflow-y:auto;
 }
 
-/* LEFT SIDE */
-.hero-left {
-    flex: 1.2;
-    text-align: left;
+.dropdown.active{
+display:block;
 }
 
-#welcomeText {
-    font-size: clamp(28px, 4vw, 48px);
-    font-weight: 800;
-    margin-bottom: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    align-items: center;
-}
-.welcome-name { color: var(--primary); }
-
-/* GRID BOXES */
-.action-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 15px;
+.dropdown a{
+display:block;
+padding:10px 12px;
+text-decoration:none;
+color:#444;
+font-weight:600;
+border-radius:10px;
+font-size:14px;
+transition:.2s;
 }
 
-.action-card {
-    background: white;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: var(--shadow);
-    cursor: pointer;
-    transition: 0.3s;
-    border: 1px solid transparent;
+.dropdown a:hover{
+background:rgba(244,180,0,.12);
+color:var(--primary);
 }
 
-.action-card:hover {
-    transform: translateY(-5px);
-    border-color: var(--primary);
+.section-title{
+font-size:11px;
+color:#999;
+margin:10px 0 6px;
+letter-spacing:.5px;
 }
 
-.card-icon {
-    font-size: 24px;
-    margin-bottom: 10px;
-    background: #fff9e6;
-    width: 50px; height: 50px;
-    display: flex; align-items: center; justify-content: center;
-    border-radius: 12px;
+/* MAIN */
+.main{
+max-width:1200px;
+margin:auto;
+padding:60px 20px 50px;
+text-align:center;
 }
 
-.action-card h3 { font-size: 15px; font-weight: 700; margin-bottom: 5px; }
-.action-card p { font-size: 12px; color: #777; line-height: 1.4; }
-
-/* RIGHT SIDE IMAGE */
-.hero-right {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    animation: float 4s ease-in-out infinite;
+#welcomeText{
+font-size:34px;
+font-weight:800;
+margin-bottom:8px;
 }
 
-.hero-img {
-    width: 100%;
-    max-width: 400px;
+.subtitle{
+color:#777;
+margin-bottom:40px;
+font-size:15px;
 }
 
-/* MOBILE FIX */
-@media(max-width: 768px){
-    .hero-container { flex-direction: column; text-align: center; padding-top: 20px; }
-    .hero-right { order: 1; }
-    .hero-left { order: 2; width: 100%; }
-    #welcomeText { justify-content: center; }
-    .action-grid { grid-template-columns: 1fr; }
+/* CARDS GRID */
+.cards{
+display:grid;
+grid-template-columns:repeat(3,1fr);
+gap:24px;
+width:100%;
 }
 
-@keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-15px); } }
+.card{
+background:white;
+padding:26px;
+border-radius:22px;
+box-shadow:var(--shadow);
+cursor:pointer;
+transition:.25s ease;
+border:2px solid transparent;
+text-align:center;
+}
 
+.card:hover{
+transform:translateY(-6px);
+border-color:var(--primary);
+}
+
+.card h3{
+margin-bottom:10px;
+font-size:16px;
+font-weight:700;
+}
+
+.card p{
+font-size:13px;
+color:#777;
+line-height:1.5;
+}
+
+/* Tablet */
+@media(max-width:950px){
+.cards{
+grid-template-columns:repeat(2,1fr);
+}
+}
+
+/* Mobile */
+@media(max-width:600px){
+.cards{
+grid-template-columns:1fr;
+}
+#welcomeText{
+font-size:24px;
+}
+.card{
+padding:20px;
+}
+}
+
+/* Paired hive style */
+.hive-item{
+display:flex;
+justify-content:space-between;
+align-items:center;
+margin-bottom:8px;
+font-size:14px;
+}
+.hive-item span{
+cursor:pointer;
+}
 </style>
 </head>
 
 <body>
 
 <div class="topbar">
-    <div class="menu">
-        <button class="menu-btn">☰</button>
-        <div class="dropdown">
-            <b>Main Controls</b>
-            <a onclick="openDemo()">📊 Open Demo Dashboard</a>
-            <a onclick="pairHive()">➕ Add New Hive</a>
-            <hr>
-            <b>Services</b>
-            <a href="calculator.html">🍯 Honey Calculator</a>
-            <a href="market.html">📈 Market Analysis</a>
-            <a href="videos.html">🎥 Learning Videos</a>
-            <a href="chatbot.html">🤖 Kanasu Bee Chatbot</a>
-            <a href="image-disease.html">🐝 BEE SCAN AI</a>
-            <hr>
-            <a onclick="logout()" style="color:#e74c3c">Logout</a>
-        </div>
-    </div>
-    <h2><span style="color:#2d3436;">Kanasu </span><span style="color:#f4b400;">Bee House</span></h2>
-    <div style="width:40px"></div>
+
+<button class="menu-btn" onclick="toggleMenu()">☰</button>
+
+<div class="dropdown" id="menuDropdown">
+
+<a onclick="openDemo()">📊 Demo Dashboard</a>
+<a onclick="pairHive()">➕ Add New Hive</a>
+
+<div class="section-title">Paired Hives</div>
+<div id="dashboardList"></div>
+
+<hr style="margin:12px 0;">
+
+<a href="calculator.html">🍯 Honey Calculator</a>
+<a href="learning.html">🎓 Learning Centre</a>
+<a href="market.html">📈 Market Analysis</a>
+<a href="chatbot.html">🤖 Kanasu Chatbot</a>
+<a href="image-disease.html">🐝 Bee Scan AI</a>
+<a href="about.html">ℹ️ About Project</a>
+
+<hr style="margin:12px 0;">
+<a onclick="logout()" style="color:#e74c3c;">Logout</a>
+
 </div>
 
-<div class="hero-container">
-    <div class="hero-left">
-        <h1 id="welcomeText">Hello, <span class="welcome-name" id="userName">...</span> 👋</h1>
-        
-        <div class="action-grid">
-            <div class="action-card" onclick="openDemo()">
-                <div class="card-icon">📊</div>
-                <h3>Open Demo</h3>
-                <p>Simulate real-time data monitoring.</p>
-            </div>
+<h2>
+<span style="color:black;">Kanasu </span>
+<span style="color:#f4b400;">Bee House</span>
+</h2>
 
-            <div class="action-card" onclick="pairHive()">
-                <div class="card-icon">➕</div>
-                <h3>Add Hive</h3>
-                <p>Connect your hardware via ID.</p>
-            </div>
+</div>
 
-            <div class="action-card" onclick="window.location.href='image-disease.html'">
-                <div class="card-icon">🐝</div>
-                <h3>BEE SCAN AI</h3>
-                <p>Detect bee diseases via image.</p>
-            </div>
+<div class="main">
 
-            <div class="action-card" onclick="window.location.href='chatbot.html'">
-                <div class="card-icon">🤖</div>
-                <h3>Bee Chatbot</h3>
-                <p>AI assistant for your apiary.</p>
-            </div>
-        </div>
-    </div>
+<h1 id="welcomeText">Loading...</h1>
+<p class="subtitle">Ready to monitor your hive health?</p>
 
-    <div class="hero-right">
-        <img src="welcome-bee.png" class="hero-img">
-    </div>
+<div class="cards">
+
+<div class="card" onclick="openDemo()">
+<h3>📊 Demo Dashboard</h3>
+<p>Explore simulated analytics</p>
+</div>
+
+<div class="card" onclick="pairHive()">
+<h3>➕ Add New Hive</h3>
+<p>Connect to registered hive</p>
+</div>
+
+<div class="card" onclick="location.href='calculator.html'">
+<h3>🍯 Honey Calculator</h3>
+<p>Estimate honey production</p>
+</div>
+
+<div class="card" onclick="location.href='videos.html'">
+<h3>🎓 Learning Centre</h3>
+<p>Educational resources</p>
+</div>
+
+<div class="card" onclick="location.href='chatbot.html'">
+<h3>🤖 Kanasu Chatbot</h3>
+<p>AI hive assistant</p>
+</div>
+
+<div class="card" onclick="location.href='image-disease.html'">
+<h3>🐝 Bee Scan AI</h3>
+<p>Disease detection tool</p>
+</div>
+
+</div>
+
 </div>
 
 <script>
+let pairedHives=JSON.parse(localStorage.getItem("pairedHives"))||[];
+
+function toggleMenu(){
+menuDropdown.classList.toggle("active");
+}
+
 firebase.auth().onAuthStateChanged(user=>{
-    if(user){
-        firebase.database().ref("users/"+user.uid).once("value")
-        .then(snapshot=>{
-            let data=snapshot.val();
-            document.getElementById("userName").innerText = data && data.name ? data.name : "Friend";
-        });
-    }else{
-        window.location.href="index.html";
-    }
+if(user){
+firebase.database().ref("users/"+user.uid).once("value")
+.then(snapshot=>{
+let data=snapshot.val();
+if(data && data.name){
+welcomeText.innerHTML=
+`<span style="color:black;">Welcome </span>
+<span style="color:#f4b400;">${data.name}</span>`;
+}else{
+welcomeText.innerHTML="Welcome";
+}
+});
+}else{
+window.location.href="index.html";
+}
 });
 
-function openDemo(){ window.location.href="dashboard.html"; }
-function pairHive(){
-    let id=prompt("Hive ID"), pin=prompt("PIN"), name=prompt("Name");
-    if(id && pin && name){
-        firebase.database().ref("hives/"+id).once("value").then(snap=>{
-            if(snap.exists() && String(snap.val().pin)===String(pin)){
-                alert("Success!"); window.location.href="dashboard.html";
-            } else { alert("Error!"); }
-        });
-    }
+function openDemo(){
+window.location.href="dashboard.html";
 }
-function logout(){ firebase.auth().signOut().then(()=>window.location.href="index.html"); }
+
+function pairHive(){
+let hiveId=prompt("Enter Hive ID");
+if(!hiveId) return;
+let pin=prompt("Enter Hive PIN");
+if(!pin) return;
+let customName=prompt("Enter Custom Hive Name");
+if(!customName) return;
+
+firebase.database().ref("hives/"+hiveId).once("value").then(snapshot=>{
+if(!snapshot.exists()){
+alert("Hive not found!");
+return;
+}
+if(String(snapshot.val().pin)===String(pin)){
+alert("Hive Paired Successfully!");
+pairedHives.push({id:hiveId,name:customName});
+localStorage.setItem("pairedHives",JSON.stringify(pairedHives));
+renderList();
+}else{
+alert("Incorrect PIN");
+}
+});
+}
+
+function renderList(){
+dashboardList.innerHTML="";
+pairedHives.forEach((h,index)=>{
+let div=document.createElement("div");
+div.className="hive-item";
+let name=document.createElement("span");
+name.innerText="🐝 "+h.name;
+name.onclick=()=>{
+localStorage.setItem("activeHiveId",h.id);
+localStorage.setItem("activeHiveName",h.name);
+window.location.href="live-dashboard.html";
+};
+let del=document.createElement("span");
+del.innerText="❌";
+del.onclick=()=>{
+pairedHives.splice(index,1);
+localStorage.setItem("pairedHives",JSON.stringify(pairedHives));
+renderList();
+};
+div.appendChild(name);
+div.appendChild(del);
+dashboardList.appendChild(div);
+});
+}
+
+function logout(){
+firebase.auth().signOut().then(()=>window.location.href="index.html");
+}
+
+renderList();
 </script>
 
 </body>
